[gd_scene load_steps=2 format=3 uid="uid://cywpwt1icc3cx"]

[ext_resource type="Script" path="res://Scenes/UI/menu.gd" id="1_fufoo"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fufoo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HostGameButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(225, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 33
text = "Host Game"

[node name="JoinGameButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(225, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 33
text = "Join Game"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(225, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 33
text = "Quit"

[connection signal="button_down" from="Panel/VBox/HostGameButton" to="." method="_on_host_game_button_button_down"]
[connection signal="button_down" from="Panel/VBox/JoinGameButton" to="." method="_on_join_game_button_button_down"]
[connection signal="button_down" from="Panel/VBox/QuitButton" to="." method="_on_quit_button_button_down"]
